<resources>
    <string name="app_name">SavvySaver</string>
    <string name="welcome_heading">Welcome to SavvySaver</string>
    <string name="welcome_moto">Level up your savings</string>
    <string name="welcome_advantages">Earn XP for logging expenses \nUnlock badges \nComplete Challenges
    </string>
    <string name="accountQuestion">Already have an account?</string>
    <string name="Started">Get Started!</string>
    <string name="Signin">Sign in</string>

</resources>