<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_black_blue"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/accountQuestionTextView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="48dp"
        android:text="Or"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFacebook"
        android:layout_width="301dp"
        android:layout_height="47dp"

        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_white"
        android:backgroundTint="@null"
        android:gravity="center"
        android:drawableStart="@drawable/facebook1"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="Continue with Facebook"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogle"
        android:layout_width="301dp"
        android:layout_height="47dp"

        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_white"
        android:backgroundTint="@null"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawableStart="@drawable/google1"
        android:drawablePadding="12dp"
        android:gravity="center"
        android:text="Continue with Google"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountQuestionTextView" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:text="Password"
        android:textAlignment="center"
        android:textColor="#FFF4B0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.269" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/btnPassword"
        android:layout_width="353dp"
        android:layout_height="51dp"

        android:layout_marginStart="23dp"
        android:background="@drawable/btn_white"
        android:backgroundTint="@null"
        android:gravity="center"
        android:hint="**********"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

    <TextView
        android:id="@+id/accountQuestionTextView"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/accountQuestion"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/EmailTextView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:text="Email"
        android:textAlignment="center"
        android:textColor="#FFF4B0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/headingTextView"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FAF3F3"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/btnEmail"
        android:layout_width="353dp"
        android:layout_height="51dp"

        android:layout_marginStart="26dp"
        android:background="@drawable/btn_white"

        android:backgroundTint="@null"
        android:gravity="center"
        android:hint="user@gmail.com"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="183dp"
        android:layout_height="67dp"

        android:layout_marginStart="114dp"

        android:layout_marginTop="20dp"
        android:background="@drawable/btn_gradient"
        android:gravity="center"
        android:text="Login"

        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPassword" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="94dp"
        android:layout_height="83dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_gradient"
        android:backgroundTint="@null"
        android:text="@string/Signin"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="85dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingTextView"
        android:src="@drawable/profile" />

</androidx.constraintlayout.widget.ConstraintLayout>